<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Leave_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF2F2"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="10"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"/>

        <Button
            android:id="@+id/btnleaveapp"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:background="@drawable/leavebutton"
            android:text="@string/leaveapply"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"/>

        <Button
            android:id="@+id/btnleavebal"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:background="@drawable/leavebutton"
            android:text="@string/leavebal"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"/>

        <Button
            android:id="@+id/btnleavestatus"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:background="@drawable/leavebutton"
            android:text="@string/leave_status"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"/>

        <Button
            android:id="@+id/btnsanctionleave"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:background="@drawable/leavebutton"
            android:text="@string/sanction_leave"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/about" />

    </LinearLayout>

</FrameLayout>