<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".Homepage_Activity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="#ffffff"
        android:background="#262626"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>

    <LinearLayout
        android:layout_below="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:orientation="vertical"
        android:background="#FFF2F2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changepass"
            android:gravity="center"
            android:textSize="30sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:id="@+id/linearlayouttohide"
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/oldpass"
                    android:textSize="20sp"
                    android:gravity="start|center_vertical"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/EToldpass"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/hintoldpass"
                    android:inputType="textWebPassword"
                    android:textAlignment="center"/>

                <ImageButton
                    android:id="@+id/forgotpass"
                    android:contentDescription="@string/welcome"
                    android:layout_width="120dp"
                    android:layout_height="20dp"
                    android:background="@drawable/forgot_password"
                    android:layout_gravity="end"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayouttohide1"
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/username"
                    android:textSize="20sp"
                    android:gravity="start|center_vertical"/>

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/ETpfno"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/hintusername"
                    android:inputType="number"
                    android:textAlignment="center"/>

        </LinearLayout>

        <Space
            android:id="@+id/spacehide1"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="start|center_vertical"
                    android:textSize="20sp"
                    android:text="@string/newpassfirst"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="start|center_vertical"
                    android:textSize="20sp"
                    android:text="@string/newpasssecond"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">



                <EditText
                    android:id="@+id/ETnewpassfirst"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/hintnewpass"
                    android:inputType="textWebPassword"
                    android:textAlignment="center"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/ETnewpasssecond"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/hintnewpass"
                    android:inputType="textWebPassword"
                    android:textAlignment="center"/>

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/btnsubmit"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/submit"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/about" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5547365499588155/7486773551">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>