<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Homepage_Activity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="#ffffff"
        android:background="#262626"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>

    <LinearLayout
        android:layout_below="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:id="@+id/homepage_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/homepage_title"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#E62500"
            android:background="#005959"
            android:layout_weight="0.8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:weightSum="5"
            android:background="#009999">

            <TextView
                android:gravity="center"
                android:layout_weight="3.9"
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textStyle="bold"
                android:background="#009999"
                android:textSize="20sp" />

            <Button
                android:layout_weight="1.1"
                android:id="@+id/logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#009999"
                android:textSize="15sp"
                android:text="@string/logout"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.2">

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:background="#009999"
            android:weightSum="3"
            android:layout_weight="1">

            <Button
                android:id="@+id/leave"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#E6A73A"
                android:textSize="15sp"
                android:text="@string/leaveapplication"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/homepage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#C48E31"
                android:text="@string/home"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/personal_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#E6A73A"
                android:textSize="15sp"
                android:text="@string/personal_info"
                tools:ignore="ButtonStyle"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>