<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="#ffffff"
        android:background="#262626"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#E0FFFF"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            app:srcCompat="@drawable/irlogo_old" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/username"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintusername"
                android:inputType="number"
                android:textColor="#FF6347"
                android:textSize="20sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="33dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintpassword"
                android:inputType="textPassword"
                android:textColor="#FF6347"
                android:textSize="20sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <CheckBox
                android:id="@+id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remember Me"
                android:textSize="20sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/login"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#000000"
                android:textSize="22sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <ImageButton
                android:id="@+id/forgotpass"
                android:contentDescription="@string/welcome"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:background="@drawable/forgot_password"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/about" />

    </LinearLayout>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-5547365499588155/2162145322">
        </com.google.android.gms.ads.AdView>

</RelativeLayout>